samples/_failures_safe/1761273553_917a6c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a68966de.c: In function ‘main’:
./samples/SAFE/__tmp_a68966de.c:149:20: error: missing terminating " character
  149 |             printf("\nTrans
      |                    ^~~~~~~~
./samples/SAFE/__tmp_a68966de.c:149:13: error: expected expression at end of input
  149 |             printf("\nTrans
      |             ^~~~~~
./samples/SAFE/__tmp_a68966de.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a68966de.c:149:13: error: expected declaration or statement at end of input
